# google-ads-mcp

./: .env.example  .gitignore  README.md  article.md  format_customer_id_test.py  google_ads_server.py  package-lock.json  pyproject.toml  requirements.txt  test_google_ads_mcp.py
