[project]
name = "mcp-google-ads"
version = "0.1.0"
description = "Google Ads API integration for Model Context Protocol (MCP) - AIとの対話でGoogle広告を管理・分析"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nishi0077"}
]
keywords = ["mcp", "google-ads", "google-ads-api", "claude", "cursor", "ai", "advertising", "ppc", "sem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "google-api-python-client>=2.163.0",
    "google-auth>=2.25.2",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/nishi0077/google-ads-mcp"
"Bug Tracker" = "https://github.com/nishi0077/google-ads-mcp/issues"
"Documentation" = "https://github.com/nishi0077/google-ads-mcp#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["google_ads_server"]
